E commit zwüschedure cha nid schade, right?

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         }
         )
         document.body.appendChild(content)
+        const footer = makeFooter(`Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure culpa perferendis suscipit commodi dolore, consequuntur amet voluptates tenetur iusto doloremque excepturi, ipsum odio id repellat modi veritatis. Doloribus, laboriosam magnam?`)
+        document.body.appendChild(footer)
     </script>
     <div id="sidebar">
         <p>
@@ -78,8 +80,5 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione alias culpa rem esse deleniti quia perferendis magnam recusandae magni delectus suscipit, tempore tempora nesciunt sit. Illum ipsam architecto ab adipisci.
         </p>
     </div>
-    <footer id="footer">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure facilis est cupiditate ea officia omnis, veniam natus porro suscipit reprehenderit aperiam, quis sapiente voluptate similique dolorem fuga commodi! Mollitia, non?</p>
-    </footer>
 </body>
 </html>
