--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <script src="./index.js"></script>
-    <script async type="text/javascript">
+    <script type="text/javascript">
         let Header = makeHeader()
         document.body.appendChild(Header)
         let content = makeMainContent("Alchemist", `Das Alchemist ist ein cooles Restaurant an der Schifflände. Das Konzept des Restaurants ist es eine coole, angenehme, freundschaftliche Atmosphäre zu schaffen. 
