--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
 <body>
     <script src="./index.js"></script>
     <script type="text/javascript">
-        const favicons = makeFavicons();
+        let favicons = makeFavicons();
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
         let content = makeMainContent("Baselfood - Der Blog für Restaurants aus der Region", `Hey, mir sin cool. tschüss`)
         document.body.appendChild(content)
-        const footer = makeFooter(`Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure culpa perferendis suscipit commodi dolore, consequuntur amet voluptates tenetur iusto doloremque excepturi, ipsum odio id repellat modi veritatis. Doloribus, laboriosam magnam?`)
+        let sideBar = makeSidebar();
+        document.body.appendChild(sideBar);
+        let footer = makeFooter(`Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure culpa perferendis suscipit commodi dolore, consequuntur amet voluptates tenetur iusto doloremque excepturi, ipsum odio id repellat modi veritatis. Doloribus, laboriosam magnam?`)
         document.body.appendChild(footer)
     </script>
-    <div id="sidebar">
-        <p>
-            hey
-        </p>
-    </div>
 </body>
 </html>
