finally realised that makeFooter doesn't need args and filled out some temp about us

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -12,6 +12,13 @@
     <script type="text/javascript">
         let Header = makeHeader()
         document.body.appendChild(Header)
+        let content = makeMainContent("Über uns", `Wir sind Arik, Noée und Gian. Wir haben uns als Abschlussprojekt der Sekundarschule für einen Foodblog entschieden, der (hoffentlich) wöchentlich mit neuen Bewertungen von Restaurants und Cafés der Region Basel erscheint.
+        Wir alle übernehmen im Team verschiedene Rollen. Wo Noée und Arik die Restaurants und Cafés testen, ist Gian für diese Website verantwortlich.`)
+        document.body.appendChild(content)
+        let sideBar = makeSidebar();
+        document.body.appendChild(sideBar);
+        let footer = makeFooter()
+        document.body.appendChild(footer)
     </script>
 </body>
 </html>
