--- a/alchemist/index.html
+++ b/alchemist/index.html
@@ -51,7 +51,7 @@
         document.body.appendChild(content)
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
-        let footer = makeFooter(`Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure culpa perferendis suscipit commodi dolore, consequuntur amet voluptates tenetur iusto doloremque excepturi, ipsum odio id repellat modi veritatis. Doloribus, laboriosam magnam?`)
+        let footer = makeFooter()
         document.body.appendChild(footer)
     </script>
     <div id="sidebar">
