introduced makeLandingPage() so makeMainContent() doesn't become a if-else mess

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
-        let content = makeMainContent("Baselfood - Der Blog für Restaurants aus der Region", `Hey, mir sin cool. tschüss`)
+        let content = makeLandingPage();
         document.body.appendChild(content)
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
-        let footer = makeFooter(`Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure culpa perferendis suscipit commodi dolore, consequuntur amet voluptates tenetur iusto doloremque excepturi, ipsum odio id repellat modi veritatis. Doloribus, laboriosam magnam?`)
+        let footer = makeFooter()
         document.body.appendChild(footer)
     </script>
 </body>
