Some changes I guess

--- a/alchemist/index.html
+++ b/alchemist/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foodblog</title>
+    <title>Alchemist</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
@@ -41,9 +41,8 @@
             Ausstattung: 4
         }, 
         {
-            Addresse: "Schifflände 1 4051 Basel", 
+            Adresse: "Schifflände 1 4051 Basel", 
             Telefonnummer: "061 561 88 68",
-            Warme_Küche_bis: "22.00",
             Email: "info@alchemistbasel.ch",
             Website: "https://www.alchemistbasel.ch/"
         }
@@ -54,10 +53,5 @@
         let footer = makeFooter()
         document.body.appendChild(footer)
     </script>
-    <div id="sidebar">
-        <p>
-            hey
-        </p>
-    </div>
 </body>
 </html>
