Added opening times

--- a/alchemist/index.html
+++ b/alchemist/index.html
@@ -18,17 +18,17 @@
         Die Speisekarte besteht aus vielen kleinen Speisen wie Dips, Suppen, Pommes, Brot usw. und es gibt eine grosse Auswahl. Die kleinen Portionen sind zum Teilen gedacht. Also man bestellt viele kleine Speisen und stellt sie in die Mitte des Tisches und teilt. Dieses Restaurant bringt auf jeden Fall ein Erlebnis, weil man unter anderem seine Getränke selber mixen kann und die Präsentation der Getränke und Speisen sehr schön und anregend ist. Das Ambiente ist sehr toll, locker, geheimnisvoll und man fühlt sich schnell wohl. 
         Der Service ist auch sehr nett und beantwortet gerne Fragen, wenn man zum ersten Mal dort ist und noch alles neu ist. Auf der Website kann man noch viel mehr erfahren z.B wie es zum Namen Alchemist kam, wieso genau es an diesem Ort ist, wieso sie dieses Menü und Essen für ihr Restaurant-Konzept gewählt haben und noch vieles mehr.`, 
         [
-            "alchemist/door.png",
-            "alchemist/tube-system.png",
-            "alchemist/tube.png",
-            "alchemist/wax.png",
-            "alchemist/glace.png",
-            "break",
-            "alchemist/bottles.png",
-            "alchemist/food.png",
-            "alchemist/steamy-kitchen.png",
-            "alchemist/card.png",
-            "alchemist/chairs.png",
+        "alchemist/door.png",
+        "alchemist/tube-system.png",
+        "alchemist/tube.png",
+        "alchemist/wax.png",
+        "alchemist/glace.png",
+        "break",
+        "alchemist/bottles.png",
+        "alchemist/food.png",
+        "alchemist/steamy-kitchen.png",
+        "alchemist/card.png",
+        "alchemist/chairs.png",
         ], 
         {
             Ambiente: 4, 
@@ -45,13 +45,18 @@
             Telefonnummer: "061 561 88 68",
             Email: "info@alchemistbasel.ch",
             Website: "https://www.alchemistbasel.ch/"
+        },
+        {
+            Montag_bis_Donnerstag: "11.30 bis 14.30 / 17.00 bis 23.00",
+            Freitag: "11.30 bis 14.30 / 17.00 bis 24.00",
+            Samstag: "12.00 bis 24.00" 
         }
-        )
-        document.body.appendChild(content)
+        );
+        document.body.appendChild(content);
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
-        let footer = makeFooter()
-        document.body.appendChild(footer)
+        let footer = makeFooter();
+        document.body.appendChild(footer);
     </script>
 </body>
 </html>
