--- a/streuli/index.html
+++ b/streuli/index.html
@@ -14,7 +14,8 @@
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
-        let content = makeMainContent("Café Streuli", ``, 
+        let content = makeMainContent("Café Streuli", `Das Café Streuli liegt etwas versteckt auf dem Bruderholz und ist ein eher kleines Café. Man wird freundlich begrüsst und der Service ist sehr gut. Das Angebot besteht aus Café, Gebäck, Konfekt und ein Snackangebot z.B. Sandwiches, belegte Brote usw. 
+        Die Preise sind etwa im Mittelbereich, und im Vergleich zu den Produkten angemessen. Das Café ist auch gut für eine kurze Wegzerrung oder einen Take-Away Kaffee. Das Café bietet zusätzlich einen Packet Dienst an, bei dem Pakete gegen eine Gebühr abgegeben werden können. `, 
         [
             "https://media-cdn.tripadvisor.com/media/photo-s/12/00/a2/6d/sidewalk-seating-and.jpg",
 			"https://media-cdn.tripadvisor.com/media/photo-s/12/00/a9/cb/interior-view.jpg",
