added opening times for all the blog so far

--- a/musetti/index.html
+++ b/musetti/index.html
@@ -39,6 +39,10 @@
             Telefonnummer: "061 641 26 42 ",
             Email: "reservation@wiesengartenmusetti.ch",
             Website: "http://www.wiesengartenmusetti.ch/"
+        },
+        {
+            Montag_und_Dienstag: "Nicht geöffnet",
+            Mittwoch_bis_Sonntag: "11.30 bis 14.00 / 18.00 bis 23.00"
         }
         )
         document.body.appendChild(content)
