--- a/streuli/index.html
+++ b/streuli/index.html
@@ -38,6 +38,11 @@
             Telefonnummer: "061 362 07 10 (zu Bürozeiten)",
             Email: "streuli.hummel@bluewin.com",
             Website: "https://hummel.cafe-streuli.ch/"
+        },
+        {
+            Montag_bis_Fritag: "07.00 bis 18.00",
+            Samstag: "08.00 bis 17.00",
+            Sonntag: "09.00 bis 17.00"
         }
         )
         document.body.appendChild(content)
