added cafe bar elisabethen

--- a/elisabethen/index.html
+++ b/elisabethen/index.html
@@ -14,7 +14,9 @@
         document.head.innerHTML += favicons;
         let Header = makeHeader()
         document.body.appendChild(Header)
-        let content = makeMainContent("Café Bar Elisabethen", ``, 
+        let content = makeMainContent("Café Bar Elisabethen", `Die Café Bar Elisabethen befindet sich direkt in der Elisabethenkirche. Im Sommer bietet sich ein wunderschöner Aussenbereich an, um einen Cappuccino zu trinken oder eine kleine Mahlzeit zu essen. Ausserdem hat es einen sehr herzigen kleinen Innenbereich, in dem man an kalten Wintertagen sein kann. 
+        In dem Onlineshop, sowie auch vor Ort in der Café Bar kann man Weine, wie auch Bio-Reis und andere Produkte kaufen. Als kleine Speisen bietet das Café Suppen oder Salate an. Das Highlight von der Café Bar Elisabethen ist jedoch der Kaffee, der fast genauso wie in Italien schmeckt. 
+        Das Personal ist sehr freundlich und man fühlt sich schnell wohl. Für einen kurzen Stop zum Aufwärmen eignet sich das Café sehr und ist daher empfehlenswert.`, 
         [
             "elisabethen/cake.png",
             "elisabethen/bottles.png",
@@ -26,14 +28,14 @@
             "elisabethen/people.png",
         ], 
         {
-            Ambiente: 4, 
-            Preis_Leistungs_Verhältnis: 3, 
-            Qualität_der_Speisen: 5, 
-            Quantität_der_Auswahl: 4, 
+            Ambiente: 5, 
+            Preis_Leistungs_Verhältnis: 4, 
+            Qualität_der_Speisen: 4, 
+            Quantität_der_Auswahl: 2, 
             Lage: 4, 
-            Hygiene: 5, 
-            Service: 4.5, 
-            Ausstattung: 4
+            Hygiene: 4, 
+            Service: 4, 
+            Ausstattung: 3
         }, 
         {
             Adresse: "Elisabethenstrasse 14 4051 Basel", 
