fixed the musetti

--- a/Musetti/index.html
+++ b/Musetti/index.html
@@ -17,11 +17,13 @@
 		Das Restaurant ist ein Familienbetrieb und man merkt, dass die Betreiber mit sehr viel Leidenschaft dabei sind. Auch die Speisen, wie z.B. die Pasta sind komplett hausgemacht. Im Zentrum des Restaurants steht auch der Wein. Es gibt es eine grosse Weinkarte, aus verschiedenen Regionen Italiens. Die verwendeten Produkte sind saisonal und marktfrisch. 
 		Das Restaurant wird mehrheitlich von Erwachsenen besucht, und ist nicht unbedingt die beste Wahl für Kinder, da die Speisekarte keine Kindermenüs enthält. Die Preise sind etwas gehoben, was aber bei der hervorragenden Qualität und der hausgemachten Zubereitung gerechtfertigt sind. Die Räumlichkeiten sind relativ klein, aber sehr gemütlich eingerichtet.`, 
         [
+            "musetti/fleisch.png",
+            "musetti/sauce.png",
             "musetti/glace.png",
             "musetti/wine.png",
-            "musetti/musetti-bei-nacht",
-            "musetti/musetti-von-aussen",
-            "musetti/musetti-von-innen"
+            "musetti/aussen.png",
+            "musetti/innen.png",
+            "musetti/nacht.png",
         ], 
         {
             Ambiente: 4, 
