--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <script src="./index.js"></script>
+    <script src="https://baselfood.github.io/index.js"></script>
     <script type="text/javascript">
         let favicons = makeFavicons();
         document.head.innerHTML += favicons;
