--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baselfood</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="https://baselfood.github.io/style.css">
 </head>
 <body>
     <script src="https://baselfood.github.io/index.js"></script>
