--- a/Elisabethen/index.html
+++ b/Elisabethen/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvYtPqZSAXLwFhmwZoq_bgethkZw3gjz4&callback=initMap"></script>
 </head>
 <body>
     <script src="../index.js"></script>
+    <script>
+        window.initMap = function() {
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: {lat: 47.5451464, lng: 7.5869987},
+                zoom: 12,
+            });
+            const marker = new google.maps.Marker(
+                {
+                    map: map,
+                    position: new google.maps.LatLng(47.5527293, 7.5911635),
+                    title: "Café Bar Elisabethen"
+                }
+            )
+        }
+    </script>
     <script type="text/javascript">
         let favicons = makeFavicons();
         document.head.innerHTML += favicons;
@@ -17,14 +33,14 @@
         In dem Onlineshop, sowie auch vor Ort in der Café Bar kann man Weine, wie auch Bio-Reis und andere Produkte kaufen. Als kleine Speisen bietet das Café Suppen oder Salate an. Das Highlight von der Café Bar Elisabethen ist jedoch der Kaffee, der fast genauso wie in Italien schmeckt. 
         Das Personal ist sehr freundlich und man fühlt sich schnell wohl. Für einen kurzen Stop zum Aufwärmen eignet sich das Café sehr und ist daher empfehlenswert.`, 
         [
-            "elisabethen/cake.png",
-            "elisabethen/bottles.png",
-            "elisabethen/stairs.png",
-            "elisabethen/window.png",
-            "elisabethen/chairs.png",
-            "break",
-            "elisabethen/entrance.png",
-            "elisabethen/people.png",
+        "elisabethen/cake.png",
+        "elisabethen/bottles.png",
+        "elisabethen/stairs.png",
+        "elisabethen/window.png",
+        "elisabethen/chairs.png",
+        "break",
+        "elisabethen/entrance.png",
+        "elisabethen/people.png",
         ], 
         {
             Ambiente: 5, 
@@ -52,6 +68,7 @@
         document.body.appendChild(sideBar);
         let footer = makeFooter();
         document.body.appendChild(footer);
+        checkMap();
     </script>
 </body>
 </html>
