--- a/Musetti/index.html
+++ b/Musetti/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvYtPqZSAXLwFhmwZoq_bgethkZw3gjz4&callback=initMap"></script>
 </head>
 <body>
     <script src="../index.js"></script>
+    <script>
+        window.initMap = function() {
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: {lat: 47.5451464, lng: 7.5869987},
+                zoom: 12,
+            });
+            const marker = new google.maps.Marker(
+                {
+                    map: map,
+                    position: new google.maps.LatLng(47.5914631, 7.6473783),
+                    title: "Wiesengarten Musetti"
+                }
+            )
+        }
+    </script>
     <script type="text/javascript">
         let favicons = makeFavicons();
         document.head.innerHTML += favicons;
@@ -50,7 +66,8 @@
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
         let footer = makeFooter()
-        document.body.appendChild(footer)
+        document.body.appendChild(footer);
+        checkMap();
     </script>
 </body>
 </html>
