--- a/googlemapstest.html
+++ b/googlemapstest.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maps test</title>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvYtPqZSAXLwFhmwZoq_bgethkZw3gjz4&callback=initMap"></script>
 </head>
 <body>
-    <div id="map"></div>
+    <script>
+        window.initMap = function() {
+            let map = document.createElement("div");
+            map.id = "map";
+            document.body.appendChild(map);
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: {lat: 47.5451464, lng: 7.5869987},
+                zoom: 12,
+            });
+            const marker = new google.maps.Marker(
+                {
+                    map: map,
+                    position: new google.maps.LatLng(47.5570095, 7.5877449),
+                    title: "Wiesengarten Musetti"
+                }
+            )
+        }
+    </script>
     <style>
         #map {
             border: 10px solid rgb(134, 134, 134);
@@ -22,21 +40,5 @@
             padding: 0;
         }
     </style>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvYtPqZSAXLwFhmwZoq_bgethkZw3gjz4&callback=initMap"></script>
-    <script>
-        function initMap() {
-            let map = new google.maps.Map(document.getElementById("map"), {
-                center: {lat: 47.5451464, lng: 7.5869987},
-                zoom: 12,
-            });
-            const marker = new google.maps.Marker(
-                {
-                    map: map,
-                    position: new google.maps.LatLng(47.5570095, 7.5877449),
-                    title: "Wiesengarten Musetti"
-                }
-            )
-        }
-    </script>
 </body>
 </html>
