--- a/Alchemist/index.html
+++ b/Alchemist/index.html
@@ -47,7 +47,7 @@
         ], 
         {
             Ambiente: 4, 
-            Preis_Leistungs_Verhältnis: 3, 
+            PreisçLeistungsçVerhältnis: 3, 
             Qualität_der_Speisen: 5, 
             Quantität_der_Auswahl: 4, 
             Lage: 4, 
