--- a/Elisabethen/index.html
+++ b/Elisabethen/index.html
@@ -44,7 +44,7 @@
         ], 
         {
             Ambiente: 5, 
-            Preis_Leistungs_Verhältnis: 4, 
+            PreisçLeistungsçVerhältnis: 4, 
             Qualität_der_Speisen: 4, 
             Quantität_der_Auswahl: 2, 
             Lage: 4, 
