--- a/Streuli/index.html
+++ b/Streuli/index.html
@@ -40,7 +40,7 @@
         ], 
         {
             Ambiente: 3.5, 
-            Preis_Leistungs_Verhältnis: 4, 
+            PreisçLeistungsçVerhältnis: 4, 
             Qualität_der_Speisen: 4.5, 
             Quantität_der_Auswahl: 3, 
             Lage: 5, 
