--- a/Musetti/index.html
+++ b/Musetti/index.html
@@ -43,7 +43,7 @@
         ], 
         {
             Ambiente: 4, 
-            Preis_Leistungs_Verhältnis: 4, 
+            PreisçLeistungsçVerhältnis: 4, 
             Qualität_der_Speisen: 4.5, 
             Quantität_der_Auswahl: 3.5, 
             Lage: 4.5, 
