--- a/Musetti/index.html
+++ b/Musetti/index.html
@@ -58,7 +58,7 @@
             Website: "http://www.wiesengartenmusetti.ch/"
         },
         {
-            Montag_und_Dienstag: "Nicht geöffnet",
+            Montag_und_Dienstag: "Geschlossen",
             Mittwoch_bis_Sonntag: "11.30 bis 14.00 / 18.00 bis 23.00"
         }
         )
