--- a/Werk8/index.html
+++ b/Werk8/index.html
@@ -36,8 +36,8 @@
             "Werk8/eingang.png",
             "Werk8/kerze.png",
             "Werk8/bar.png",
-            "Werk8/sandwich.png",
-            "Werk8/karte.png"
+            "Werk8/karte.png",
+            "Werk8/sandwich.png"
         ], 
         {
             Ambiente: 4, 
