darkmode is now extremly cool

--- a/Musetti/index.html
+++ b/Musetti/index.html
@@ -68,6 +68,7 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         checkMap();
+        toggleDarkmode(true);
     </script>
 </body>
 </html>
