--- a/Streuli/index.html
+++ b/Streuli/index.html
@@ -66,6 +66,7 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         checkMap();
+        toggleDarkmode(true);
     </script>
 </body>
 </html>
