--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -20,7 +20,8 @@
         let sideBar = makeSidebar();
         document.body.appendChild(sideBar);
         let footer = makeFooter()
-        document.body.appendChild(footer)
+        document.body.appendChild(footer);
+        toggleDarkmode(true);
     </script>
 </body>
 </html>
