--- a/Alchemist/index.html
+++ b/Alchemist/index.html
@@ -73,6 +73,7 @@
         let footer = makeFooter();
         document.body.appendChild(footer);
         checkMap();
+        toggleDarkmode(true);
     </script>
 </body>
 </html>
