--- a/Lilys/index.html
+++ b/Lilys/index.html
@@ -11,7 +11,7 @@
     <script src="../index.js"></script>
     <script>
         window.initMap = function() {
-            map = new google.maps.Map(document.getElementById("map"), {
+            const map = new google.maps.Map(document.getElementById("map"), {
                 center: {lat: 47.5451464, lng: 7.5869987},
                 zoom: 12,
             });
@@ -63,6 +63,7 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         checkMap();
+        toggleDarkmode(true);
     </script>
 </body>
 </html>
