--- a/Werk8/index.html
+++ b/Werk8/index.html
@@ -68,6 +68,7 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         checkMap();
+        toggleDarkmode(true);
     </script>
 </body>
 </html>
