--- a/Streuli/index.html
+++ b/Streuli/index.html
@@ -66,7 +66,10 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         checkMap();
-        toggleDarkmode(true);
+        document.addEventListener("DOMContentLoaded", _ => {
+            toggleDarkmode(true);
+            console.log(document.readyState)
+        });
     </script>
 </body>
 </html>
