--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -21,7 +21,10 @@
         document.body.appendChild(sideBar);
         let footer = makeFooter()
         document.body.appendChild(footer);
-        toggleDarkmode(true);
+        document.addEventListener("DOMContentLoaded", _ => {
+            toggleDarkmode(true);
+            console.log(document.readyState)
+        });
     </script>
 </body>
 </html>
