--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
         document.body.appendChild(sideBar);
         let footer = makeFooter()
         document.body.appendChild(footer);
-        document.addEventListener("DOMContentLoaded", _ => {
+        window.addEventListener("load", _ => {
             toggleDarkmode(true);
             console.log(document.readyState)
         });
