--- a/Werk8/index.html
+++ b/Werk8/index.html
@@ -68,7 +68,7 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         checkMap();
-        document.addEventListener("DOMContentLoaded", _ => {
+        window.addEventListener("load", _ => {
             toggleDarkmode(true);
             console.log(document.readyState)
         });
