--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         let footer = makeFooter();
         document.body.appendChild(footer);
         window.addEventListener("load", _ => {
+            alert("test");
             toggleDarkmode(true);
             console.log(document.readyState)
         });
