--- a/404.html
+++ b/404.html
@@ -23,6 +23,7 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         window.addEventListener("load", _ => {
+            alert("test");
             toggleDarkmode(true);
             console.log(document.readyState)
         });
