--- a/Lilys/index.html
+++ b/Lilys/index.html
@@ -64,6 +64,7 @@
         document.body.appendChild(footer);
         checkMap();
         window.addEventListener("load", _ => {
+            alert("test");
             toggleDarkmode(true);
             console.log(document.readyState)
         });
