--- a/Werk8/index.html
+++ b/Werk8/index.html
@@ -69,6 +69,7 @@
         document.body.appendChild(footer);
         checkMap();
         window.addEventListener("load", _ => {
+            alert("test");
             toggleDarkmode(true);
             console.log(document.readyState)
         });
