--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -22,6 +22,7 @@
         let footer = makeFooter()
         document.body.appendChild(footer);
         window.addEventListener("load", _ => {
+            alert("test");
             toggleDarkmode(true);
             console.log(document.readyState)
         });
