formatted time better

--- a/Nomad/index.html
+++ b/Nomad/index.html
@@ -57,8 +57,8 @@
             Website: "https://www.nomad.ch/"
         },
         {
-            Sonntag_bis_Mittwoch: "7 Uhr bis 23 Uhr",
-            Donnerstag_bis_Samstag: "7 Uhr bis 24 Uhr"
+            Sonntag_bis_Mittwoch: "7.00 bis 23.00",
+            Donnerstag_bis_Samstag: "7.00 bis 24.00"
         }
         )
         document.body.appendChild(content)
